--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint  './**/*.ts'"
   },
   "dependencies": {
+    "@actions/core": "^1.5.0",
+    "@actions/github": "^5.0.0",
     "@types/google-spreadsheet": "^3.1.5",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
