🚧 include collector as a new step

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -15,6 +15,9 @@ jobs:
       - run: npm ci
       - run: npm run lint
 
+  collect:
+    runs-on: ubuntu-latest
+    steps:
       - name: Run eslint and send data to collector
         uses: edgardleal/code-quality-to-spreadsheet-action@main
         with:
