include one more step

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -18,6 +18,24 @@ jobs:
   collect:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+
+
+      - name: Parse taskdefinition file for production environment
+        uses: edgardleal/mustache-template-action@v1.0.4
+          # if: contains(github.ref, 'master')
+        env:
+          ENV: prd
+        with:
+          input: package.json
+          output: parsed.json
+          debug: true
+
       - name: Run eslint and send data to collector
         uses: edgardleal/code-quality-to-spreadsheet-action@main
         with:
